<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_company"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/company_details" />
        <item
            android:id="@+id/nav_inward"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/yarn_received" />
        <item
            android:id="@+id/nav_outward"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/yarn_delivery" />
        <item
            android:id="@+id/nav_production"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/production" />
        <item
            android:id="@+id/nav_billing"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/billing" />
    </group>

    <item android:title="Extras">
        <menu>
            <item
                android:id="@+id/print"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/Print" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
