<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="146dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Company_Name"
                android:layout_height="wrap_content"
                android:id="@+id/lcompanyname"
                android:layout_width="120dp" />

            <Spinner
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner" />


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Mill_Name"
                android:layout_height="wrap_content"
                android:id="@+id/lmillname"
                android:layout_width="120dp"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etmillname" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:text="@string/Counts"
                android:layout_height="wrap_content"
                android:id="@+id/lcounts"
                android:layout_width="120dp"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etcounts" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/No_of_bags"
                android:layout_height="wrap_content"
                android:id="@+id/lnoofbags"
                android:layout_width="120dp"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etnoofbags" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Per_Bag_weight"
                android:layout_height="wrap_content"
                android:id="@+id/lperbagweight"
                android:layout_width="120dp"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etperbagweight" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Total_Kgs"
                android:layout_height="wrap_content"
                android:id="@+id/ltotalkgs"
                android:layout_width="120dp"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etltotalkgs" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSaveCompanydetails"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:textColor="#000000"
        android:textStyle="bold"/>


</LinearLayout>

