<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAddUpdate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/First_Name"
                        android:inputType="textCapWords"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:ems="15"
                        android:background="@drawable/edit_text_design"

                        />

                    <EditText
                        android:id="@+id/etLastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Last_Name"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:ems="15"
                        android:background="@drawable/edit_text_design"
                        android:inputType="textCapWords" />
                    <EditText
                        android:id="@+id/etCompanyName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Company_Name"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:ems="15"
                        android:background="@drawable/edit_text_design"
                        android:inputType="textCapWords"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/Contact_no"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:ems="15"
                        android:background="@drawable/edit_text_design"
                        android:id="@+id/etPhone" />
                    <Spinner
                        android:id="@+id/etCompanytype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:ems="15"
                        android:background="@drawable/edit_text_design"
                        android:entries="@array/company_type_arrays" />
                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:ems="15"
                        android:background="@drawable/edit_text_design"
                        android:hint="@string/Email_Address" />


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSaveCompanydetails"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:textColor="#000000"
        android:textStyle="bold"/>

</LinearLayout>